--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1"
   },
   "repository": {
@@ -25,5 +25,8 @@
     "node",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
